----------------------------------------------------------------------
 OmegaT x.x.x Changes
----------------------------------------------------------------------

x.x.x vs. 1.7.2


  8 Enhancements
  1 Bugfixes

----------------------------------------------------------------------
x.x.x

  Implemented requests:
  
  - Editor window name
  http://sourceforge.net/support/tracker.php?aid=1764103

  - Tool: Spellchecker
  http://sourceforge.net/support/tracker.php?aid=991510 

  - Letter case change in editing field 
  http://sourceforge.net/support/tracker.php?aid=1386063  

  - Display source segments 
  http://sourceforge.net/support/tracker.php?aid=1805172   

  - Mark translated segments 
  http://sourceforge.net/support/tracker.php?aid=1805173    

  - Navigation history  
  http://sourceforge.net/support/tracker.php?aid=1805175     

  - HTML, skip extraction of messages matching regxep
  http://sourceforge.net/support/tracker.php?aid=1787085     

  - (X)HTML filter: do not translate input VALUE attribute
  http://sourceforge.net/support/tracker.php?aid=1787153     

  Bug fixes:
  
  - <context> should be ignored in XLIFF files  
  http://sourceforge.net/support/tracker.php?aid=1800677

----------------------------------------------------------------------
 OmegaT 1.7.2 Changes
----------------------------------------------------------------------

1.7.2 vs. 1.7.1


  11 Enhancements
   7 Bugfixes

----------------------------------------------------------------------
1.7.2


Contains three new localisations (Simplified Chinese, Traditional Chinese and Czech) and bug fixes

 Implemented requests:
  
  - Have a more complete ISO 639 list in the UI
  http://sourceforge.net/support/tracker.php?aid=1755240

  - instant start display in the main window
  http://sourceforge.net/support/tracker.php?aid=1604238

  - Current file highlighted in Project Files Window
  http://sourceforge.net/support/tracker.php?aid=1766670 

 Other enhancements:
